force-app/main/default/objects/DA_Case__b/DA_Case__b.object-meta.xml
<CustomObject>
    <label>DA Case</label>
    <pluralLabel>DA Case</pluralLabel>
</CustomObject>