force-app/main/default/objects/DA_Case__b/fields/Account_Manager_formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_formula__c</fullName>
    <label>Account Manager</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>