force-app/main/default/objects/DA_Case__b/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Addressee Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>