force-app/main/default/objects/DA_Case__b/fields/Address2Postcode__c.field-meta.xml
<CustomField>
    <fullName>Address2Postcode__c</fullName>
    <label>Addressee Address Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>