force-app/main/default/objects/DA_Case__b/fields/Address4__c.field-meta.xml
<CustomField>
    <fullName>Address4__c</fullName>
    <label>Receiver Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>