force-app/main/default/objects/DA_Case__b/fields/Address4Postcode__c.field-meta.xml
<CustomField>
    <fullName>Address4Postcode__c</fullName>
    <label>Receiver Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>