force-app/main/default/objects/DA_Case__b/fields/Allows_authority_to_leave__c.field-meta.xml
<CustomField>
    <fullName>Allows_authority_to_leave__c</fullName>
    <label>Allows Authority To Leave?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>