force-app/main/default/objects/DA_Case__b/fields/AMLCTF_Please_Explain_Type__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Please_Explain_Type__c</fullName>
    <label>Please Explain Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>