force-app/main/default/objects/DA_Case__b/fields/APT_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Term__c</fullName>
    <label>Contract Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>