force-app/main/default/objects/DA_Case__b/fields/APT_Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Volume__c</fullName>
    <label>Contract Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>