force-app/main/default/objects/DA_Case__b/fields/Article_Receiver_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Article_Receiver_Suburb__c</fullName>
    <label>Receiver Suburb</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>