force-app/main/default/objects/DA_Case__b/fields/Article_ReceiverPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Article_ReceiverPhoneNumber__c</fullName>
    <label>Receiver Phone Number</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>