force-app/main/default/objects/DA_Case__b/fields/Article_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>