force-app/main/default/objects/DA_Case__b/fields/ArticlePostageCost__c.field-meta.xml
<CustomField>
    <fullName>ArticlePostageCost__c</fullName>
    <label>Article Postage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>