force-app/main/default/objects/DA_Case__b/fields/Authorization_Origin__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Origin__c</fullName>
    <label>Authorization Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>