force-app/main/default/objects/DA_Case__b/fields/Billing_Account_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Parent_Id__c</fullName>
    <label>Billing Account Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>