force-app/main/default/objects/DA_Case__b/fields/BSP_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>BSP_Sender_Address__c</fullName>
    <label>BSP Sender Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>