force-app/main/default/objects/DA_Case__b/fields/Business_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Business_Benefit__c</fullName>
    <label>Business Benefit</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>