force-app/main/default/objects/DA_Case__b/fields/Calc_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Calc_Case_Subject__c</fullName>
    <label>Calc Case Subject</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>