force-app/main/default/objects/DA_Case__b/fields/Case_Lead__c.field-meta.xml
<CustomField>
    <fullName>Case_Lead__c</fullName>
    <label>Case Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Lead1564402674344</relationshipName>
    <type>Lookup</type>
</CustomField>