force-app/main/default/objects/DA_Case__b/fields/Case_Resolution_Time_in_Min__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Time_in_Min__c</fullName>
    <label>Case Resolution Time in Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>