force-app/main/default/objects/DA_Case__b/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Record Type</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>