force-app/main/default/objects/DA_Case__b/fields/CN08Details__c.field-meta.xml
<CustomField>
    <fullName>CN08Details__c</fullName>
    <label>CN08 Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>