force-app/main/default/objects/DA_Case__b/fields/CNC_Peoplesoft__c.field-meta.xml
<CustomField>
    <fullName>CNC_Peoplesoft__c</fullName>
    <label>CNC Peoplesoft</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>