force-app/main/default/objects/DA_Case__b/fields/Contract_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Finish_Date__c</fullName>
    <label>Contract Finish Date</label>
    <type>DateTime</type>
</CustomField>