force-app/main/default/objects/DA_Case__b/fields/Contract_Management_Agent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Management_Agent__c</fullName>
    <label>Contract Management Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Management_Agent1564402674315</relationshipName>
    <type>Lookup</type>
</CustomField>