force-app/main/default/objects/DA_Case__b/fields/Credit_Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Limit__c</fullName>
    <label>Credit Approval Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>