force-app/main/default/objects/DA_Case__b/fields/CreditRepresentative__c.field-meta.xml
<CustomField>
    <fullName>CreditRepresentative__c</fullName>
    <label>Credit Representative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>