force-app/main/default/objects/DA_Case__b/fields/Customer_Stream__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stream__c</fullName>
    <label>Customer Stream</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>