force-app/main/default/objects/DA_Case__b/fields/Damage_or_Loss__c.field-meta.xml
<CustomField>
    <fullName>Damage_or_Loss__c</fullName>
    <label>Damage or Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>