force-app/main/default/objects/DA_Case__b/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date FI informed of outcome</label>
    <type>DateTime</type>
</CustomField>