force-app/main/default/objects/DA_Case__b/fields/Delivery_Address_DPID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_DPID__c</fullName>
    <label>DPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>