force-app/main/default/objects/DA_Case__b/fields/Delivery_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection_Date__c</fullName>
    <label>Delivery/Collection Date</label>
    <type>DateTime</type>
</CustomField>