force-app/main/default/objects/DA_Case__b/fields/Description_of_packaging__c.field-meta.xml
<CustomField>
    <fullName>Description_of_packaging__c</fullName>
    <label>Description Of Packaging</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>