force-app/main/default/objects/DA_Case__b/fields/DescriptionofContents__c.field-meta.xml
<CustomField>
    <fullName>DescriptionofContents__c</fullName>
    <label>Description of Contents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>