force-app/main/default/objects/DA_Case__b/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel(s)</label>
    <length>22</length>
    <type>Text</type>
</CustomField>