force-app/main/default/objects/DA_Case__b/fields/Email_Bypass_Data_enforcement__c.field-meta.xml
<CustomField>
    <fullName>Email_Bypass_Data_enforcement__c</fullName>
    <label>Email Bypass Data enforcement?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>