force-app/main/default/objects/DA_Case__b/fields/Estimated_time_to_complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_time_to_complete__c</fullName>
    <label>Est. Time to Complete(Mins)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>