force-app/main/default/objects/DA_Case__b/fields/FirstName1__c.field-meta.xml
<CustomField>
    <fullName>FirstName1__c</fullName>
    <label>Additional Applicant 1 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>