force-app/main/default/objects/DA_Case__b/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>