force-app/main/default/objects/DA_Case__b/fields/GetFeedbackSurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>GetFeedbackSurveyResponse__c</fullName>
    <label>GetFeedback Survey Response</label>
    <referenceTo>GetFeedback_Survey__c</referenceTo>
    <relationshipName>GetFeedbackSurveyResponse1564402674205</relationshipName>
    <type>Lookup</type>
</CustomField>