force-app/main/default/objects/DA_Case__b/fields/Impact_AP__c.field-meta.xml
<CustomField>
    <fullName>Impact_AP__c</fullName>
    <label>Impact AP</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>