force-app/main/default/objects/DA_Case__b/fields/Internal_Tier_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Tier_Escalation_Email__c</fullName>
    <label>Internal Tier Escalation Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>