force-app/main/default/objects/DA_Case__b/fields/LastName2__c.field-meta.xml
<CustomField>
    <fullName>LastName2__c</fullName>
    <label>Additional Applicant 2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>