force-app/main/default/objects/DA_Case__b/fields/LastName5__c.field-meta.xml
<CustomField>
    <fullName>LastName5__c</fullName>
    <label>Additional Applicant 5 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>