force-app/main/default/objects/DA_Case__b/fields/Lodgement_Network__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Network__c</fullName>
    <label>Lodgement Point</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipName>Lodgement_Network1564402674276</relationshipName>
    <type>Lookup</type>
</CustomField>