force-app/main/default/objects/DA_Case__b/fields/MPB_BSP_Tech_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>MPB_BSP_Tech_Enquiry_Type__c</fullName>
    <label>MPB BSP Tech Enquiry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>