force-app/main/default/objects/DA_Case__b/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipName>Network1564402674282</relationshipName>
    <type>Lookup</type>
</CustomField>