force-app/main/default/objects/DA_Case__b/fields/Network_Org_Unit_Addr_1__c.field-meta.xml
<CustomField>
    <fullName>Network_Org_Unit_Addr_1__c</fullName>
    <label>Address Line 1</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>