force-app/main/default/objects/DA_Case__b/fields/No_of_Item_s_Short__c.field-meta.xml
<CustomField>
    <fullName>No_of_Item_s_Short__c</fullName>
    <label>No. of Item(s) Short</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>