force-app/main/default/objects/DA_Case__b/fields/NPSTagDate__c.field-meta.xml
<CustomField>
    <fullName>NPSTagDate__c</fullName>
    <label>NPS Tag Date</label>
    <type>DateTime</type>
</CustomField>