force-app/main/default/objects/DA_Case__b/fields/Other_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Type__c</fullName>
    <label>Other Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>