force-app/main/default/objects/DA_Case__b/fields/Pre_Post_Manual_Steps__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_Manual_Steps__c</fullName>
    <label>Pre/Post Manual Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>