force-app/main/default/objects/DA_Case__b/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <label>Preferred Communication Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>