force-app/main/default/objects/DA_Case__b/fields/Problem_Related_to__c.field-meta.xml
<CustomField>
    <fullName>Problem_Related_to__c</fullName>
    <label>Problem Related to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>