force-app/main/default/objects/DA_Case__b/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>