force-app/main/default/objects/DA_Case__b/fields/Recent_Caller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Recent_Caller_Last_Name__c</fullName>
    <label>Contact Last Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>