force-app/main/default/objects/DA_Case__b/fields/Recent_Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Recent_Contact_Mobile_Number__c</fullName>
    <label>Contact Mobile Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>