force-app/main/default/objects/DA_Case__b/fields/Resolution_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Plan_Date__c</fullName>
    <label>Resolution Plan Date</label>
    <type>DateTime</type>
</CustomField>