force-app/main/default/objects/DA_Case__b/fields/Resolution_Result__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Result__c</fullName>
    <label>Resolution Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>