force-app/main/default/objects/DA_Case__b/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>OPC Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>