force-app/main/default/objects/DA_Case__b/fields/Retail_Products__c.field-meta.xml
<CustomField>
    <fullName>Retail_Products__c</fullName>
    <label>Retail Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>