force-app/main/default/objects/DA_Case__b/fields/Retail_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Retail_Subject_Line__c</fullName>
    <label>Retail Subject Line</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>