force-app/main/default/objects/DA_Case__b/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <label>Risk Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>