force-app/main/default/objects/DA_Case__b/fields/S_IsSelfServiceClosed__c.field-meta.xml
<CustomField>
    <fullName>S_IsSelfServiceClosed__c</fullName>
    <label>Closed by Self-Service User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>