force-app/main/default/objects/DA_Case__b/fields/S_IsVisibleInSelfService__c.field-meta.xml
<CustomField>
    <fullName>S_IsVisibleInSelfService__c</fullName>
    <label>Visible in Self-Service Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>