force-app/main/default/objects/DA_Case__b/fields/S_ParentId__c.field-meta.xml
<CustomField>
    <fullName>S_ParentId__c</fullName>
    <label>Parent Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Parent1564402674151</relationshipName>
    <type>Lookup</type>
</CustomField>