force-app/main/default/objects/DA_Case__b/fields/S_SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>S_SuppliedEmail__c</fullName>
    <label>Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>