force-app/main/default/objects/DA_Case__b/fields/Secondary_Companry__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Companry__c</fullName>
    <label>Addressee Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>