force-app/main/default/objects/DA_Case__b/fields/SecondaryAccount__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAccount__c</fullName>
    <label>Secondary Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>