force-app/main/default/objects/DA_Case__b/fields/ST_Root_cause__c.field-meta.xml
<CustomField>
    <fullName>ST_Root_cause__c</fullName>
    <label>Root cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>