force-app/main/default/objects/DA_Case__b/fields/StatusTrackingDurationRollup__c.field-meta.xml
<CustomField>
    <fullName>StatusTrackingDurationRollup__c</fullName>
    <label>Status Tracking Duration</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>