force-app/main/default/objects/DA_Case__b/fields/Strategic_Goal__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Goal__c</fullName>
    <label>Strategic Goal</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>