force-app/main/default/objects/DA_Case__b/fields/Sub_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Sub_Accounts__c</fullName>
    <label>Sub-Account Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>