force-app/main/default/objects/DA_Case__b/fields/Test_coverage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Test_coverage_Percentage__c</fullName>
    <label>Test coverage Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>