force-app/main/default/objects/DA_Case__b/fields/TestTick__c.field-meta.xml
<CustomField>
    <fullName>TestTick__c</fullName>
    <label>TestTick</label>
    <length>255</length>
    <type>Text</type>
</CustomField>