force-app/main/default/objects/DA_Case__b/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Security Tier</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>