force-app/main/default/objects/DA_Case__b/fields/Time_Open_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Time_Open_Since_Creation__c</fullName>
    <label>Days Open Since Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>