force-app/main/default/objects/DA_Case__b/fields/Time_With_Customer__c.field-meta.xml
<CustomField>
    <fullName>Time_With_Customer__c</fullName>
    <label>Time With Customer</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>