force-app/main/default/objects/DA_Case__b/fields/TimeToResolve__c.field-meta.xml
<CustomField>
    <fullName>TimeToResolve__c</fullName>
    <label>Time to Resolve</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>