force-app/main/default/objects/DA_Case__b/fields/Total_Amount_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Claim__c</fullName>
    <label>Total Amount of Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>