force-app/main/default/objects/DA_Case__b/fields/Transport_Collections__c.field-meta.xml
<CustomField>
    <fullName>Transport_Collections__c</fullName>
    <label>Transport Collections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>