force-app/main/default/objects/DA_Case__b/fields/TypeofDamage__c.field-meta.xml
<CustomField>
    <fullName>TypeofDamage__c</fullName>
    <label>Type of Damage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>