force-app/main/default/objects/DA_Case__b/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <label>URL Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>