force-app/main/default/objects/DA_Case__b/fields/Year_of_Closed_Case__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Closed_Case__c</fullName>
    <label>Year of Closed Case</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>